# OOP_labs

./: README.md
lab1/: main.cpp  report_lab1.md
lab1/include/: lab1.h
lab1/src/: lab1.cpp
lab1/tests/: test_lab1.cpp
lab2/: CMakeLists.txt  README.md
lab2/include/: thirteen.h
lab2/src/: lab2.cpp  thirteen.cpp
lab2/tests/: test_lab2.cpp  thirteen_tests.cpp
lab4/: CMakeLists.txt  README.md
lab4/include/: array.h  figure.h  octagon.h  point.h  square.h  triangle.h
lab4/src/: array.cpp  figure.cpp  main.cpp  octagon.cpp  square.cpp  triangle.cpp
lab4/tests/: test_figures.cpp
lab5/: CMakeLists.txt
lab5/include/: dynamic_array.h  dynamic_memory_resource.h  test_structs.h
lab5/src/: dynamic_array.cpp  dynamic_memory_resource.cpp  main.cpp
lab5/tests/: dynamic_array_tests.cpp
lab6/: CMakeLists.txt  readme.md
lab6/include/factory/: npc_factory.h
lab6/include/game/: game.h
lab6/include/npc/: bear.h  knight.h  npc.h  orc.h
lab6/include/observer/: file_observer.h
lab6/include/visitor/: combat_visitor.h
lab6/src/: main.cpp
lab6/src/factory/: npc_factory.cpp
lab6/src/game/: game.cpp
lab6/src/npc/: bear.cpp  npc.cpp
lab6/src/observer/: console_observer.cpp
lab6/src/visitor/: combat_visitor.cpp
lab6/tests/: combat_test.cpp  factory_test.cpp  npc_test.cpp
lab7/: CMakeLists.txt  readme.md
lab7/include/common/: globals.h
lab7/include/game/: coroutine_game.h  game.h  thread_safe_container.h
lab7/include/npc/: bear.h  knight.h  npc.h  orc.h
lab7/include/observer/: combat_observer.h  console_observer.h
lab7/src/: main_coroutine.cpp  main_threaded.cpp
lab7/src/common/: globals.cpp
lab7/src/game/: coroutine_game.cpp  game.cpp  thread_safe_container.cpp
lab7/src/npc/: knight.cpp  npc.cpp  orc.cpp
lab7/src/observer/: console_observer.cpp  file_observer.cpp
lab7/tests/: combat_test.cpp  factory_test.cpp  npc_test.cpp
